# OolongUI

./: CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp
src/Core/: ResourceManager.h  ResourceWrapper.h
src/Core/Application/: Application.cpp  Application.h
src/Core/GPUResource/: PendingDeletion.h  ResourceManager.cpp  ResourceManager.h  ResourceWrapper.h
src/Core/Renderer/: Renderer.cpp  Renderer.h
